# latamgpt-benchmark

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: dataset-citations-and-comparison.md  model-selection-2026-04-22.md
scripts/: run-current-cost-balanced.ps1  run-current-flagships.ps1  run-current-recommended.ps1
src/latamgpt_benchmark/: __init__.py  batching.py  cli.py  config.py  datasets.py  evaluator.py  judge.py  judge_only.py  model_suites.py  models.py  scoring.py  utils.py
tests/: test_config.py  test_datasets.py  test_judge_only.py  test_model_suites.py  test_scoring.py
